수강편람 업데이트(2012-2)

--- a/data/htm/2012_2_core_society.htm
+++ b/data/htm/2012_2_core_society.htm
@@ -339,9 +339,9 @@
 <td class="pstyle2">현대국가와 행정&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2"> - &nbsp;</td>
+<td class="pstyle2">목&nbsp;7.5,8.5,9.5&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">57-1-113&nbsp;</td>
 <td class="pstyle2">정용덕&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
