--- a/data/htm/2012_2_normal_exercise.htm
+++ b/data/htm/2012_2_normal_exercise.htm
@@ -160,7 +160,7 @@
 <td class="pstyle2">수&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">안애순&nbsp;</td>
+<td class="pstyle2">윤혜영&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -664,7 +664,7 @@
 <td class="pstyle2">테니스초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">월&nbsp;5,6&nbsp;</td>
+<td class="pstyle2">목&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">전현수&nbsp;</td>
@@ -677,7 +677,7 @@
 <td class="pstyle2">테니스초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">월&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">목&nbsp;7,8&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">전현수&nbsp;</td>
@@ -781,7 +781,7 @@
 <td class="pstyle2">테니스초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">금&nbsp;1,2&nbsp;</td>
+<td class="pstyle2">목&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">신명진&nbsp;</td>
@@ -846,7 +846,7 @@
 <td class="pstyle2">테니스중급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">금&nbsp;3,4&nbsp;</td>
+<td class="pstyle2">목&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">신명진&nbsp;</td>
@@ -1522,7 +1522,7 @@
 <td class="pstyle2">탁구초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">수&nbsp;6,7&nbsp;</td>
+<td class="pstyle2">수&nbsp;7,8&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">김식&nbsp;</td>
