--- a/data/htm/2012_2_normal_nature.htm
+++ b/data/htm/2012_2_normal_nature.htm
@@ -277,7 +277,7 @@
 <td class="pstyle2">월&nbsp;8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">026-108&nbsp;</td>
-<td class="pstyle2">Sungwan Kim&nbsp;</td>
+<td class="pstyle2">김상완&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -290,7 +290,7 @@
 <td class="pstyle2">수&nbsp;8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">026-108&nbsp;</td>
-<td class="pstyle2">Sungwan Kim&nbsp;</td>
+<td class="pstyle2">김상완&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
