--- a/data/htm/2012_2_normal_society.htm
+++ b/data/htm/2012_2_normal_society.htm
@@ -320,6 +320,19 @@
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">005.010&nbsp;</td>
+<td class="pstyle2">007&nbsp;</td>
+<td class="pstyle2">심리학개론&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2"> - &nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">100&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
 <td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">005.011&nbsp;</td>
 <td class="pstyle2">001&nbsp;</td>
