--- a/data/htm/2012_2_normal_special.htm
+++ b/data/htm/2012_2_normal_special.htm
@@ -1223,9 +1223,9 @@
 <td class="pstyle2">세계의 지성: 푸코 읽기&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;10,8,9&nbsp;</td>
+<td class="pstyle2">수&nbsp;10,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">005-211&nbsp;</td>
+<td class="pstyle2">005-318&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
